--- a/app/src/main/res/layout/item_selected_subreddit.xml
+++ b/app/src/main/res/layout/item_selected_subreddit.xml
@@ -6,12 +6,9 @@
 
     <ImageView
         android:id="@+id/icon_image_view_item_selected_subreddit"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_gravity="center_vertical"
-        android:clickable="true"
-        android:focusable="true"
-        android:background="?attr/selectableItemBackground" />
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center_vertical" />
 
     <TextView
         android:id="@+id/subreddit_name_item_selected_subreddit"
